# plaid-cli

./: .gitignore  CLAUDE.md  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  setup.sh
.planning/raw/: REQUIREMENTS-RAW.md
.planning/v1/: boundary-dependency-map.md  clean-requirements.md  dag.md  decomposition.md  raw-to-clean-trace.md  test-contracts.md
.planning/v1/checklists/: dag-progress.json  stage-01-raw-requirements.json  stage-02-clean-requirements.json  stage-03-research.json  stage-04-decomposition.json  stage-05-spec-tree.json  stage-06-specifications.json  stage-07-scaffolding.json  stage-08-implementation.json  stage-09-verify.json  (+1 more)
plaid_cli/: __init__.py  __main__.py  router.py
plaid_cli/api/: __init__.py  create_sandbox_link.py  exchange_token.py  fetch_accounts.py  fetch_institution.py  get_plaid_client.py  sync_transactions.py
plaid_cli/commands/: __init__.py  configure.py  create_link.py  get_transactions.py  list_accounts.py  list_items.py  sync_transactions.py
plaid_cli/config/: __init__.py  load_config.py
plaid_cli/database/: __init__.py  connect.py  delete_item.py  get_cursor.py  get_item.py  get_last_synced_at.py  list_accounts.py  list_items.py  query_transactions.py  remove_transactions.py  save_accounts.py  save_cursor.py  save_item.py  upsert_transactions.py
plaid_cli/output/: __init__.py  format_error.py  format_output.py
tests/api/: test_api.py
tests/commands/: test_commands.py
tests/config/: test_config.py
tests/database/: test_database.py
tests/output/: test_output.py
(+13 files in other folders)
